style.css
/* ... */
  html.sc .social-wrapper ul {
    list-style: none;
    list-style-image: none;
    padding: 0; }
    html.sc .social-wrapper ul li {
      float: left;
      width: 36px;
      padding: 0 4px; }
html.sc #embed-modal {
  display: none;
  background: #f2f2f2;
  overflow: hidden;
  border: 1px solid #cccccc;
  border-radius: 5px;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  z-index: 1001;
  padding: 9px;
  padding: 0.5rem;
  max-width: 300px;
  margin-top: -9px;
  margin-top: -0.5rem;
  position: absolute; }
  html.sc #embed-modal textarea[name=embed-link] {
    border: none;
    resize: none;
    font-size: 14px;
    font-size: 0.77778rem;
    background: none;
    width: 100%; }
    html.sc #embed-modal textarea[name=embed-link]:focus {
      outline: 0; }
html.sc #tribe-events .tribe-events-content p, html.sc #tribe-events .tribe-events-before-html p, html.sc #tribe-events .tribe-events-after-html p {
  margin: 0px 0px 27px 0px;
  margin: 0rem 0rem 1.5rem 0rem;
  line-height: 27px;
  line-height: 1.5rem; }
html.sc .events-list .tribe-events-loop {
  max-width: 100%;
  margin: 0; }
html.sc .tribe-events-list-separator-month {
  display: none; }
html.sc .tribe-events-list .excerpt p {
  margin-bottom: 0; }
html.sc .single-tribe_events .tribe-events-event-meta {
  padding: 13.5px;
  padding: 0.75rem;
  text-align: left;
  margin: 0;
  display: inline-block;
  width: 100%;
  font-size: 100%;
  margin-top: 1.5rem; }
  html.sc .single-tribe_events .tribe-events-event-meta dl {
    margin-top: 1.5rem;
    font-size: 16px;
    font-size: 0.88889rem; }
  html.sc .single-tribe_events .tribe-events-event-meta abbr[title] {
    border-bottom: 0; }
  html.sc .single-tribe_events .tribe-events-event-meta .tribe-events-meta-group {
    width: 100%;
    padding: 0;
    margin: 0; }
html.sc .single-tribe_events .tribe-events-venue-map {
  width: 100%;
  margin: 0; }
html.sc .single-tribe_events .tribe-events-single-section-title {
  margin: 0; }
html.sc .event-meta-group {
  zoom: 1;
  vertical-align: top; }
html.sc .tribe-events-sub-nav li a {
  background: none; }
html.sc .tribe-events-list-separator-month + .vevent.hentry.tribe-events-first {
  padding-top: 0; }
@media only screen and (max-width: 480px) {
  html.sc blockquote.pull-quote {
    margin: 0px 0px 27px 0px;
    margin: 0rem 0rem 1.5rem 0rem;
    width: 100%;
    float: none; } }
html.sc main {
  margin: 0px;
  margin: 0rem;
  max-width: 100%; }
html.sc aside#headlines nav {
  margin-top: 0px;
  margin-top: 0rem;
  margin-bottom: 26px;
  margin-bottom: 1.44444rem;
  margin-left: 0px;
  margin-left: 0rem;
  position: relative;
  right: 0;
  width: 100%; }
  html.sc aside#headlines nav ol {
    padding: 0;
    margin: 0px;
    margin: 0rem; }
    html.sc aside#headlines nav ol li {
      list-style-type: none;
      margin: 0px;
      margin: 0rem;
      border-top: 1px solid #cccccc; }
      html.sc aside#headlines nav ol li:last-of-type {
        border-bottom: 1px solid #cccccc; }
      html.sc aside#headlines nav ol li a:link, html.sc aside#headlines nav ol li a:visited {
        font-size: 18px;
        font-size: 1rem;
        padding: 13px;
        padding: 0.72222rem;
        background: #f2f2f2;
        display: block;
        text-decoration: none;
        color: #2c2c2c; }
      html.sc aside#headlines nav ol li a:hover, html.sc aside#headlines nav ol li a.active {
        text-decoration: none;
        background: #dfdfdf;
        color: #2c2c2c; }
  html.sc aside#headlines nav p:last-of-type {
    margin-bottom: 0; }
  html.sc aside#headlines nav article:not(:last-of-type) {
    border-bottom: 1px solid black; }
  html.sc aside#headlines nav h1 {
    font-size: 20px;
    font-size: 1.11111rem;
    line-height: 36px;
    line-height: 2rem;
    margin-bottom: 9px;
    margin-bottom: 0.5rem;
    clear: both;
    color: gray; }
  html.sc aside#headlines nav h2 {
    font-size: 18px;
    font-size: 1rem;
    line-height: 36px;
    line-height: 2rem;
    margin-bottom: 9px;
    margin-bottom: 0.5rem; }
html.sc nav#site-navigation {
  display: block;
  float: none; }
  html.sc nav#site-navigation ul li .active {
    background: blue; }
html.sc div#content {
  width: 90%;
  margin: 0 auto;
  overflow: hidden;
  max-width: 1185px;
  margin-bottom: 27px;
  margin-bottom: 1.5rem; }
  @media only screen and (max-width: 480px) {
    html.sc div#content {
      width: 96%; } }
html.sc div#primary {
  float: left;
  width: 70%; }
  @media only screen and (max-width: 768px) {
    html.sc div#primary {
      float: none;
      width: 100%; } }
html.sc div#secondary {
  float: left;
  width: 30%;
  padding-left: 2.33333%; }
  @media only screen and (max-width: 768px) {
    html.sc div#secondary {
      float: none;
      width: 100%;
      padding-left: 0;
      clear: both; } }
  html.sc div#secondary aside {
    width: 100%;
    margin-left: 0;
    font-size: 18px;
    font-size: 1rem; }
    @media only screen and (max-width: 480px) {
      html.sc div#secondary aside#site-overview {
        display: none; } }
    html.sc div#secondary aside#site-overview p.lead {
      color: gray;
      font-style: italic; }
    html.sc div#secondary aside.widget_search {
      min-height: 81px;
      min-height: 4.5rem; }
    @media only screen and (max-width: 768px) {
      html.sc div#secondary aside#headlines {
        display: none; } }
    @media only screen and (max-width: 768px) {
      html.sc div#secondary aside#events-list {
        border-top: 2px solid #cccccc; } }
    html.sc div#secondary aside#events-list ol {
      padding-left: 0; }
      html.sc div#secondary aside#events-list ol li {
        padding: 13.5px 0px;
        padding: 0.75rem 0rem;
        list-style-type: none;
        position: relative;
        padding-left: 80px; }
/* ... */

